# virus.xcheck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  html_reporter.py  pdf_reporter.py  pyproject.toml  requirements.txt  virusxcheck.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  publish.yml  tests.yml
tests/: conftest.py  test_api.py  test_check_hash.py  test_cli.py  test_output.py  test_validation.py
